--- a/notebooks/dataset.ipynb
+++ b/notebooks/dataset.ipynb
@@ -928,7 +928,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 53
+          "height": 35
         },
         "id": "I61AepOdfpEB",
         "outputId": "5ea703aa-c89e-41b4-9bfe-e850e21b58ac"
@@ -984,12 +984,63 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 1. Variável-Alvo"
+        "## 1. Entendimento da Variável Alvo"
       ],
       "metadata": {
         "id": "lxB39bTyHyxH"
       },
       "id": "lxB39bTyHyxH"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Passo a passo:**\n",
+        "\n",
+        "- Frequência e proporção por classe (diagnostic).\n",
+        "  - Amostras por classe\n",
+        "    - dica de gráfico: gráfico de barras com a distribuição de classes\n",
+        "        - Amostras por paciente (para evitar leakage).\n",
+        "    - dica de gráfico: faça uma tabela com uma amostra de cada classe de lesão (tipo, se tiver 20 classes, mostra uma tabela 4x5)\n",
+        "\n",
+        "---\n",
+        "\n",
+        "  Objetivo: entender distribuição de classes e o risco de vazamento por paciente/lesão.\n",
+        "\n",
+        "\n",
+        "1. **Frequência e proporção por classe**\n",
+        "\n",
+        "- O que: tabela com count e % por diagnostic.\n",
+        "\n",
+        "- Gráfico: barra ordenada (contagem e % lado a lado ou dois gráficos).\n",
+        "\n",
+        "- Checklist: classes raras (ex.: MEL costuma ser minoria), identifique “top 2” vs “cauda longa”.\n",
+        "\n",
+        "2. **Amostras por paciente (evitar leakage)**\n",
+        "\n",
+        "- O que: para cada patient_id, liste quantas lesões (lesion_id únicos) e quantas imagens tem.\n",
+        "\n",
+        "- Gráficos:\n",
+        "\n",
+        "  - histograma #imagens por paciente;\n",
+        "\n",
+        "  - histograma #imagens por lesão.\n",
+        "\n",
+        "- Checklist: pacientes com muitas imagens de uma mesma lesão → risco de overfitting se splitado por imagem.\n",
+        "\n",
+        "3. **Tabela de referência visual por classe**\n",
+        "\n",
+        "- O que: crie uma tabela 4×5 (ou o grid que couber) com 1 imagem por classe (representativa e não extrema).\n",
+        "\n",
+        "- Checklist: registre img_id e region dessas amostras (útil para reproduzir a figura no texto).\n",
+        "\n",
+        "---\n",
+        "\n",
+        "Saídas: gráficos de distribuição por classe, histogramas por paciente/lesão, grid visual 1-amostra-por-classe e um parágrafo sobre desequilíbrio observado."
+      ],
+      "metadata": {
+        "id": "raw2-gw3GJQc"
+      },
+      "id": "raw2-gw3GJQc"
     },
     {
       "cell_type": "markdown",
@@ -1415,11 +1466,11 @@
         "print(\"\\nQuantidade de classes diferentes por paciente:\\n\", cls_per_patient)\n"
       ],
       "metadata": {
-        "id": "bBdUh_dwNq1e",
-        "outputId": "01c0aa1d-674a-4abe-a9db-08eee31d6889",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bBdUh_dwNq1e",
+        "outputId": "01c0aa1d-674a-4abe-a9db-08eee31d6889"
       },
       "id": "bBdUh_dwNq1e",
       "execution_count": 49,
@@ -1489,12 +1540,12 @@
         "show_grid(sample_rows, ncols=5)\n"
       ],
       "metadata": {
-        "id": "9g_sUPufRkNM",
-        "outputId": "2423201e-9005-4255-d591-b09973cb9b15",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 311
-        }
+        },
+        "id": "9g_sUPufRkNM",
+        "outputId": "2423201e-9005-4255-d591-b09973cb9b15"
       },
       "id": "9g_sUPufRkNM",
       "execution_count": 52,
@@ -1819,6 +1870,70 @@
     {
       "cell_type": "markdown",
       "source": [
+        " - Tamanhos e resoluções (faixa, mediana, outliers).\n",
+        "    - você pode fazer um histograma com a distribuição de área total das imagens, ou dividir elas em pequenas, médias e grandes, e fazer um gráfico barra\n",
+        "    - Formato de cor (RGB vs escala de cinza).\n",
+        "       -  (acho que todas são coloridas, ou não?)\n",
+        "    - Verificar imagens corrompidas/ruins.\n",
+        "       -  (não sei se precisa, avaliar se tem imagens ruins mesmo)  \n",
+        "    - Escolher resolução padrão (ex.: 224x224, 299x299).\n",
+        "\n",
+        "---\n",
+        "\n",
+        "Objetivo: conhecer tamanhos, formatos, problemas de qualidade e decidir a resolução-padrão.\n",
+        "\n",
+        "1. **Tamanhos e resoluções**\n",
+        "\n",
+        "- O que: para cada imagem, extraia (largura, altura, área) e aspect ratio.\n",
+        "\n",
+        "- Gráficos:\n",
+        "\n",
+        "  - histograma de área (ou “pequena/média/grande” por tercis);\n",
+        "\n",
+        "  - scatter largura vs altura (pontos semi-transparentes para ver concentração);\n",
+        "\n",
+        "  - boxplot da menor dimensão (útil para decidir o menor lado alvo).\n",
+        "\n",
+        "- Checklist: outliers (resoluções minúsculas ou gigantes), variedade de aspect ratios (relevante p/ crop vs pad).\n",
+        "\n",
+        "2. **Formato de cor**\n",
+        "\n",
+        "- O que: conte imagens RGB vs 1 canal; confirme se há algum grayscale real.\n",
+        "\n",
+        "- Checklist: se houver grayscale, decidir como tratar no pipeline RGB (replicar canal) e no pipeline em tons de cinza (conversão consistente).\n",
+        "\n",
+        "3. **Integridade/qualidade**\n",
+        "\n",
+        "- O que: arquivo corrompido (falha ao abrir), imagens duplicadas (hash), dimensões 0, EXIF bizarro.\n",
+        "\n",
+        "- Opcional: heurísticas de qualidade — foco (variância do Laplaciano), brilho (média), saturação (média do S).\n",
+        "\n",
+        "- Gráficos: histograma de foco/brilho para flaggar caudas.\n",
+        "\n",
+        "- Checklist: decidir regra de descarte/flag (ex.: não descartar, mas marcar “low-quality=true” para análise posterior).\n",
+        "\n",
+        "4. **Escolha da resolução-padrão**\n",
+        "\n",
+        "- Procedimento:\n",
+        "\n",
+        "  - Olhe a distribuição da menor dimensão. Se 75% ≥ 256 px, 224×224 é seguro; se muitos < 256 mas > 160, considere 192/224; se maioria confortável, pode avaliar 299.\n",
+        "\n",
+        "  - Aspect ratio: escolha resize do menor lado + center-crop ou letterbox (pad). Para CNNs padrão (ImageNet), resize+crop é o mais comum; se lesão estiver frequentemente fora do centro, prefira random-resized-crop no treino.\n",
+        "\n",
+        "- Checklist: registre a decisão (p.ex., “menor lado 256, crop 224, manter 3 canais ou converter para 1 canal no experimento grayscale”).\n",
+        "\n",
+        "---\n",
+        "\n",
+        "Saídas: gráficos de tamanho/área, tabela de integridade/duplicatas, decisão de resolução com justificativa em 3–5 linhas."
+      ],
+      "metadata": {
+        "id": "6__AI_alGzgx"
+      },
+      "id": "6__AI_alGzgx"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Tamanho, cor, integridade, ..."
       ],
       "metadata": {
@@ -1871,12 +1986,12 @@
         "plt.tight_layout(); plt.savefig(\"figures/02_bucket_bar.png\")\n"
       ],
       "metadata": {
-        "id": "obGEWZ9rRPSB",
-        "outputId": "588cd3d5-a1e3-4fe7-ae01-75f381fc0652",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "obGEWZ9rRPSB",
+        "outputId": "588cd3d5-a1e3-4fe7-ae01-75f381fc0652"
       },
       "id": "obGEWZ9rRPSB",
       "execution_count": 53,
@@ -2252,12 +2367,72 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 3. Balanceamento, normalização e AUG"
+        "## 3. Balanceamento, Normalização e Augmentação"
       ],
       "metadata": {
         "id": "vTjiBKzjTloJ"
       },
       "id": "vTjiBKzjTloJ"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " - Há desequilíbrio forte entre classes?\n",
+        "    - Definir augmentação com base nas imperfeições reais:\n",
+        "        - flip horizontal/vertical (avaliar sentido clínico),\n",
+        "        leve rotation, crop, lighting jitter controlado,\n",
+        "        blur moderado se houver desfoque real.\n",
+        "    - Evitar augmentação artificial exagerada (distorta padrão clínico).\n",
+        "    - dica de gráfico: mostrar umas imagens aumentadas, pra mostrar o que o augmentation fez\n",
+        "\n",
+        "  ---\n",
+        "\n",
+        "  Objetivo: definir como mitigar desbalanceamento e qual augmentação é realista.\n",
+        "\n",
+        "1. **Desbalanceamento**\n",
+        "\n",
+        "- O que: curva de Pareto das classes; tabela com baseline “acurácia sempre-classe-majoritária” e acurácia balanceada teórica se previsse ao acaso por proporções.\n",
+        "\n",
+        "- Decisões:\n",
+        "\n",
+        "  - Ponderação de perda (inverse freq) como default;\n",
+        "\n",
+        "  - Oversampling de classes raras no DataLoader ou class-balanced sampler;\n",
+        "\n",
+        "  - Evite heavy oversampling de MEL se muito escasso; combine com aug fraca-moderada.\n",
+        "\n",
+        "2. **Normalização**\n",
+        "\n",
+        "- RGB: calcule média/desvio por canal no treino (após resize), documente.\n",
+        "\n",
+        "- Grayscale: calcule média/desvio únicos (ou use [0.5, 0.5, 0.5] ao replicar canal, mas registre a opção).\n",
+        "\n",
+        "3. **Augmentação alinhada ao dado**\n",
+        "\n",
+        "- Base segura:\n",
+        "\n",
+        "  - flip horizontal (avaliar implicações de lateralidade anatômica; em geral ok);\n",
+        "\n",
+        "  - rotação pequena (±10–15°);\n",
+        "\n",
+        "  - random-resized-crop (zoom levemente > 1, p.ex. scale [0.9, 1.1]);\n",
+        "\n",
+        "  - jitter leve (brilho/contraste 0.1–0.2);\n",
+        "\n",
+        "  - blur leve (p≈0.1) se há desfoque no real.\n",
+        "\n",
+        "- Evitar: distorções geométricas fortes, hue shifts agressivos, cortes que removam a lesão.\n",
+        "\n",
+        "- Gráfico sugerido: grid 3×4 com 3–4 imagens originais e suas versões aumentadas (mesmos parâmetros que serão usados no treino).\n",
+        "\n",
+        "---\n",
+        "\n",
+        "Saídas: plano de balanceamento (loss weights/oversampling), estatísticas de normalização, grid de augmentations e uma nota de “o que ficou de fora e por quê”."
+      ],
+      "metadata": {
+        "id": "D4EUwFWGIf1B"
+      },
+      "id": "D4EUwFWGIf1B"
     },
     {
       "cell_type": "markdown",
@@ -2278,6 +2453,73 @@
         "id": "kSeuvB0yTwxn"
       },
       "id": "kSeuvB0yTwxn"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 4. Particionamento"
+      ],
+      "metadata": {
+        "id": "ovZ_gW1cFSE0"
+      },
+      "id": "ovZ_gW1cFSE0"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Garantir split por paciente, não por imagem.\n",
+        "    - Train/val/test estratificado por paciente.\n",
+        "    - Teste totalmente separado e estável desde o início.\n",
+        "        - apresentar gráfico ou tabela provando que seus conjuntos de split estão balanceados por classe\n",
+        "\n",
+        "  ---\n",
+        "\n",
+        "Objetivo: splits reprodutíveis, sem vazamento e com equilíbrio razoável.\n",
+        "\n",
+        "1. **Unidade de split**\n",
+        "\n",
+        "- Regra: todas as imagens do mesmo patient_id ficam no mesmo conjunto.\n",
+        "\n",
+        "- Se um paciente tem múltiplas lesões com rótulos distintos, ainda assim agrupe por paciente (é o mais conservador contra vazamento). Registre essa decisão.\n",
+        "\n",
+        "2. **Estratificação por classe (nível paciente)**\n",
+        "\n",
+        "- Procedimento:\n",
+        "\n",
+        "  - Agregue por patient_id → defina um rótulo de estratificação: pode ser “classe principal” (a classe mais frequente do paciente) ou vetor multi-hot (quando possível usar métodos estratificados multi-rótulo).\n",
+        "\n",
+        "  - Faça train/val/test (ex.: 70/15/15) estratificado por paciente.\n",
+        "\n",
+        "  - Fixe seeds e salve os IDs dos pacientes por split (artefato versionado).\n",
+        "\n",
+        "3. **Teste estável desde o início**\n",
+        "\n",
+        "- Congele test na primeira execução e nunca o toque. Use só train/val para iteração.\n",
+        "\n",
+        "4. **Provas de equilíbrio e de não-vazamento**\n",
+        "\n",
+        "- Tabelas:\n",
+        "\n",
+        "  - Distribuição de classes por split (contagem e %).\n",
+        "\n",
+        "  - Distribuição de biopsed por split.\n",
+        "\n",
+        "  - Faixa etária e region por split (opcional, para mostrar comparabilidade).\n",
+        "\n",
+        "- Checks automáticos:\n",
+        "\n",
+        "  - Interseção de patient_id entre splits = ∅.\n",
+        "\n",
+        "  - Interseção de lesion_id entre splits = ∅ (opcional e desejável).\n",
+        "\n",
+        "  - Para cada classe, diferença absoluta de proporção entre splits ≤ limite (ex.: 3–5 p.p.). Se exceder, refaça amostragem estratificada.\n",
+        "\n",
+        "Saídas: arquivos splits/ com patients_train.txt, patients_val.txt, patients_test.txt; tabelas/gráficos de equilíbrio; checklist de vazamento zerado."
+      ],
+      "metadata": {
+        "id": "f62U4o_3JgFj"
+      },
+      "id": "f62U4o_3JgFj"
     }
   ],
   "metadata": {
